# crafter

./: .gitignore  .pdm-python  LICENSE  README.md  pyproject.toml  settings.toml.template
agent/: code_editor.py  config.py  console.py  constans.py  dependency_graph.py  directory_tree_printer.py  edit_response_parser.py  file_map.py  file_map_with_call.py  file_restorer.py  function.py  github_issues_client.py  gitignore_matcher.py  llm.py  llm_initializer.py  main.py  reference_map.py  repo.py  repo_map.py  repo_map_refactor.py  repo_structure_processor.py  schema.py  schemas.py  structure_filter.py  test.py  test_coding.py  test_plan_generation.py  test_regenerate.py  test_self_retrieval.py  test_stage_3.py
agent/constans/: default.py  generate.py  plan_generation.py  problem_set_model.py  regenerate_git_diff.py  self_retrieval.py  stage_1.py  stage_2.py  stage_3.py
agentless/fl/: FL.py
get_repo_structure/: get_repo_structure.py
tests/: test_repo.py  test_schemas.py
