[tool.poetry]
name = "agentless"
version = "0.1.0"
description = "An agentless approach to automatically solve software development problems"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
litellm = "^1.41.7"
gitpython = "^3.1.43"
rich = "^13.7.1"
requests = "^2.32.3"

[tool.poetry.group.evaluation]
optional = true

[tool.poetry.group.evaluation.dependencies]
datasets = "^2.20.0"
swebench = "^2.0.4"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
