[project]
name = "Agent"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Your Name", email = "you@example.com"},
]
dependencies = [
    "GitPython>=3.1.43",
    "requests>=2.32.3",
    "rich>=13.7.1",
    "llama-index-llms-ollama>=0.1.5",
    "dynaconf>=3.2.5",
    "httpx>=0.27.0",
    "tree-sitter-python @ git+https://github.com/tree-sitter/tree-sitter-python",
    "tree-sitter>=0.22.3",
    "loguru>=0.7.2",
    "llama-index-llms-openai-like>=0.2.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "GPLV3"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.5.1",
]
test = [
    "pytest>=8.2.2",
]
